# system-x-server

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: SetupVcpkg.cmake
extlibs/: CMakeLists.txt
source/: CMakeLists.txt  main.cpp
source/DataBase/: CMakeLists.txt  DataBase.cpp  DataBase.h
source/DataBase/api/: CMakeLists.txt  User.cpp  User.h
source/server/: CMakeLists.txt  Server.cpp  Server.h
tests/: CMakeLists.txt
